Query.output
Grammar

    0 $accept: query $end

    1 query: exp3

    2 exp1: STR
    3     | LP exp3 RP

    4 exp2: exp1
    5     | NOT exp2

    6 exp3: exp2
    7     | exp3 AND exp2
    8     | exp3 OR exp2


Terminals, with rules where they appear

$end (0) 0
error (256)
LP (258) 3
RP (259) 3
OR (260) 8
AND (261) 7
NOT (262) 5
STR (263) 2


Nonterminals, with rules where they appear

$accept (9)
    on left: 0
query (10)
    on left: 1, on right: 0
exp1 (11)
    on left: 2 3, on right: 4
exp2 (12)
    on left: 4 5, on right: 5 6 7 8
exp3 (13)
    on left: 6 7 8, on right: 1 3 7 8


State 0

    0 $accept: . query $end

    LP   shift, and go to state 1
    NOT  shift, and go to state 2
    STR  shift, and go to state 3

    query  go to state 4
    exp1   go to state 5
    exp2   go to state 6
    exp3   go to state 7


State 1

    3 exp1: LP . exp3 RP

    LP   shift, and go to state 1
    NOT  shift, and go to state 2
    STR  shift, and go to state 3

    exp1  go to state 5
    exp2  go to state 6
    exp3  go to state 8


State 2

    5 exp2: NOT . exp2

    LP   shift, and go to state 1
    NOT  shift, and go to state 2
    STR  shift, and go to state 3

    exp1  go to state 5
    exp2  go to state 9


State 3

    2 exp1: STR .

    $default  reduce using rule 2 (exp1)


State 4

    0 $accept: query . $end

    $end  shift, and go to state 10


State 5

    4 exp2: exp1 .

    $default  reduce using rule 4 (exp2)


State 6

    6 exp3: exp2 .

    $default  reduce using rule 6 (exp3)


State 7

    1 query: exp3 .
    7 exp3: exp3 . AND exp2
    8     | exp3 . OR exp2

    OR   shift, and go to state 11
    AND  shift, and go to state 12

    $default  reduce using rule 1 (query)


State 8

    3 exp1: LP exp3 . RP
    7 exp3: exp3 . AND exp2
    8     | exp3 . OR exp2

    RP   shift, and go to state 13
    OR   shift, and go to state 11
    AND  shift, and go to state 12


State 9

    5 exp2: NOT exp2 .

    $default  reduce using rule 5 (exp2)


State 10

    0 $accept: query $end .

    $default  accept


State 11

    8 exp3: exp3 OR . exp2

    LP   shift, and go to state 1
    NOT  shift, and go to state 2
    STR  shift, and go to state 3

    exp1  go to state 5
    exp2  go to state 14


State 12

    7 exp3: exp3 AND . exp2

    LP   shift, and go to state 1
    NOT  shift, and go to state 2
    STR  shift, and go to state 3

    exp1  go to state 5
    exp2  go to state 15


State 13

    3 exp1: LP exp3 RP .

    $default  reduce using rule 3 (exp1)


State 14

    8 exp3: exp3 OR exp2 .

    $default  reduce using rule 8 (exp3)


State 15

    7 exp3: exp3 AND exp2 .

    $default  reduce using rule 7 (exp3)
